<resources>
    <string name="app_name">SightSavers</string>
    <string name="Button1_Text">Vision Simulator</string>
    <string name="Button2_Text">Eye Diseases</string>
    <string name="Button3_Text">Donate</string>
    <string name="MakingDiff_btText">Making a Difference</string>
    <string name="title_activity_rules">Rules</string>
    <string name="title_activity_test">Test</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="play_text">Play</string>
    <string name="slide_1_title">Instruction 1</string>
    <string name="slide_1_desc">Hold at arms length</string>
    <string name="slide_2_title">Instruction 2</string>
    <string name="slide_2_desc">Keep head straight and the device in front of your eyes</string>
    <string name="slide_3_title">Instruction 3</string>
    <string name="slide_3_desc">Try to identify the object in the pattern</string>
    <string name="start">GOT IT</string>
    <string name="Diseases_Text">Choose a Disease to learn more!</string>
    <string name="Button4_Text">Trachoma</string>
    <string name="Button5_Text">River Blindness</string>
    <string name="Button6_Text">Cataract</string>
    <string name="Button7_Text">Glaucoma</string>
    <string name="Fode_Text">Eight-year-old Fode Dramé, who has trachoma and will receive treatment from a community volunteer to protect him for the rest of the year.</string>
    <string name="RiverB_Text">River Blindness is a tropical disease caused by a parasitic worm and transmitted by the bite of the black fly. The fly bite passes worm larvae into your skin, the worms breed and spread around your body, and when they die your immune system causes inflammation, which can blind you if it happens in your eyes.</string>
    <string name="Juliana_Text">Juliana, who lost her sight to river blindness as she had no access to treatment, and her six-year-old granddaughter Nahbila, who thanks to annual treatment is now protected from the disease.</string>
    <string name="trachomaText">Trachoma Starts off as a highly contagious bacterial infection which can be easily treated. If untreated, over time it makes your eyelashes turn inward so with every blink they’re scraping your eyeball. It is unbearably painful and eventually causes blindness.</string>
    <string name="Asfar_Text">The beam of a torch lights Afsar’s face, showing the large cataract in his right eye.</string>
    <string name="video_list_title">Title</string>
    <string name="error_init_failure">Initialization failure: Unable to play video</string>
    <string name="Glaucoma_Text">Glaucoma is a group of multiple eye conditions. It is usually caused when your eyes’ drainage tubes block, causing pressure which can damage the optic nerve. It’s treatable with eye drops, laser treatment or surgery, but it needs to be caught as early as possible. Although treatment can control it, any damage it’s already caused to your sight can’t be reversed.</string>
    <string name="Cataract_Text">Cataract is caused by a buildup of protein that clouds the eye’s lens, leading to blurred vision and eventually blindness. For children, it’s vital that it’s caught in time, or it can cause the eye to stop developing, after which it can never be properly restored. Untreated cataract can mean no education, no income, no future and no possibility of escaping poverty.</string>
    <string name="sim_question">What do you see ?</string>
    <string name="title_activity_show_test2">ShowTest2</string>
    <string name="title_activity_show_results2">ShowResults2</string>
    <string name="title_activity_show_results3">ShowResults3</string>
</resources>
