<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mark.sightsavers.Diseases">

    <TextView
        android:id="@+id/tV1_ID"
        android:textColor="@color/Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Diseases_Text"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Button4_Text"
        android:background="@color/myYellow"
        android:textColor="@color/Black"
        android:layout_below="@+id/tV1_ID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Button5_Text"
        android:background="@color/myYellow"
        android:textColor="@color/Black"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Button6_Text"
        android:background="@color/myYellow"
        android:textColor="@color/Black"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_below="@+id/button6"
        android:layout_marginTop="50dp"
        android:background="@color/myYellow"
        android:text="@string/Button7_Text"
        android:textColor="@color/Black" />


</RelativeLayout>
